Work on filters.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -7,6 +7,9 @@ CONFIG_ASSERT=y
 CONFIG_ASSERT_LEVEL=2
 CONFIG_ASSERT_VERBOSE=y
 
+CONFIG_CMSIS_DSP=y
+CONFIG_CMSIS_DSP_FILTERING=y
+
 
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
@@ -27,9 +30,13 @@ CONFIG_CEREBRI_RDD2_ROLL_KP=0
 CONFIG_CEREBRI_RDD2_PITCH_KP=0
 CONFIG_CEREBRI_RDD2_YAW_KP=0
 
-CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
-CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
-CONFIG_CEREBRI_RDD2_YAWRATE_KP=50
+CONFIG_CEREBRI_RDD2_ROLLRATE_KP=0
+CONFIG_CEREBRI_RDD2_PITCHRATE_KP=0
+CONFIG_CEREBRI_RDD2_YAWRATE_KP=0
+
+#CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
+#CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
+#CONFIG_CEREBRI_RDD2_YAWRATE_KP=50
 
 CONFIG_CEREBRI_RDD2_ROLLRATE_KI=0
 CONFIG_CEREBRI_RDD2_PITCHRATE_KI=0
