Increase input rate and perf duration.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -32,5 +32,6 @@ set_source_files_properties(
 zephyr_library_sources(
   src/common.c
   src/perf_counter.c
+  src/perf_duration.c
   ${CASADI_FILES}
   )
