Update for synapse_pb.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -35,6 +35,13 @@ CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
 
 CONFIG_CEREBRI_DREAM_SIL_LOG_LEVEL_DBG=n
 
+CONFIG_DISK_ACCESS=n
+CONFIG_FS_FATFS_EXFAT=n
+CONFIG_DISK_DRIVER_SDMMC=n
+CONFIG_FS_FATFS_MOUNT_MKFS=n
+CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=n
+
+
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
 CONFIG_POSIX_API=n
