--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -3,6 +3,12 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_SIZE_OPTIMIZATIONS=n
 
+CONFIG_DISK_ACCESS=n
+CONFIG_FS_FATFS_EXFAT=n
+CONFIG_DISK_DRIVER_SDMMC=n
+CONFIG_FS_FATFS_MOUNT_MKFS=n
+CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=n
+
 CONFIG_TEST=y
 CONFIG_UBSAN=n
 CONFIG_ASSERT=y
@@ -15,8 +21,8 @@ CONFIG_STACK_CANARIES=y
 
 CONFIG_ISR_STACK_SIZE=2048
 
-CONFIG_LOG_MODE_DEFERRED=n
-CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_MODE_IMMEDIATE=n
 
 CONFIG_FPU=y
 
@@ -31,7 +37,6 @@ CONFIG_INPUT_SHELL=n
 CONFIG_INPUT_MODE_SYNCHRONOUS=y
 CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
-CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
 
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_IMU=y
@@ -43,6 +48,8 @@ CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
 
 CONFIG_PWM=y
+CONFIG_CEREBRI_ACTUATE_PWM=y
+CONFIG_CEREBRI_ACTUATE_PWM_SHELL=n
 
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
@@ -52,37 +59,6 @@ CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_ACTUATE_SOUND=y
 
 CONFIG_ETH_NXP_S32_RX_RING_LEN=16
-
-# steering
-CONFIG_CEREBRI_ACTUATE_PWM_USE_POS_0=y
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_DISARM_0=1500
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_0=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_0=800
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_0=1
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_0=1500
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_0=1
-
-# throttle
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_1=0
-CONFIG_CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_1=y
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_DISARM_1=25000
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_1=0
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_1=500000
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_CENTER_1=25000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_1=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_1=717
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_1=1
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_1=25000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_1=1
-
-# enable
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_2=0
-CONFIG_CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_2=y
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_DISARM_2=0
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_2=0
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_2=50000
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_CENTER_2=0
 
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
