--- a/drivers/zephyr/Kconfig
+++ b/drivers/zephyr/Kconfig
@@ -1,7 +1,7 @@
 # Copyright (c) 2023 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Drivers"
+menu "Out-of-tree Zephyr drivers"
 
 rsource "*/Kconfig"
 
