--- a/dts/bindings/cerebri,pwm-actuators.yaml
+++ b/dts/bindings/cerebri,pwm-actuators.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Nordic Semiconductor ASA
+# Copyright CogniPilot Foundation 2024
 # SPDX-License-Identifier: Apache-2.0
 
 description: PWM actuators parent node
