Add dshot.overlay for rdd2
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/drivers/actuate/dshot/Kconfig
+++ b/drivers/actuate/dshot/Kconfig
@@ -4,6 +4,7 @@
 menuconfig CEREBRI_ACTUATE_DSHOT
   bool "DShot"
   depends on ZROS
+  default y if DT_HAS_CEREBRI_DSHOT_ACTUATORS_ENABLED
   help
     This option enables dshot actuators
 
