--- a/drivers/actuate/pwm/Kconfig
+++ b/drivers/actuate/pwm/Kconfig
@@ -5,6 +5,7 @@ menuconfig CEREBRI_ACTUATE_PWM
   bool "PWM"
   depends on PWM
   depends on ZROS
+  default y if DT_HAS_CEREBRI_PWM_ACTUATORS_ENABLED
   help
     This option enables pwm actuators
 
