--- a/app/melm/boards/mr_canhubk3_s32k344.conf
+++ b/app/melm/boards/mr_canhubk3_s32k344.conf
@@ -47,9 +47,8 @@ CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
 
-CONFIG_PWM=y
-CONFIG_CEREBRI_ACTUATE_PWM=y
-CONFIG_CEREBRI_ACTUATE_PWM_SHELL=n
+CONFIG_CAN=y
+CONFIG_CEREBRI_ACTUATE_VESC_CAN=y
 
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
