Update and add CAN, VESC, MELM.
Co-authored-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/melm/boards/mr_canhubk3_s32k344.conf
+++ b/app/melm/boards/mr_canhubk3_s32k344.conf
@@ -25,6 +25,7 @@ CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_MODE_IMMEDIATE=n
 
 CONFIG_FPU=y
+CONFIG_PWM=y
 
 # config
 CONFIG_INPUT=y
@@ -41,7 +42,7 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
-CONFIG_CEREBRI_SENSE_SAFETY=n
+CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
