--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,7 @@ jobs:
       - name: Install Dependencies
         run: |
           apt update
-          apt install curl pipx -y
-          pipx install clang-format==18.1.8
-          pipx install poetry==1.8.3
+          apt install curl python3-poetry clang-format-18 -y
           poetry config --list
 
       - name: Checkout
