fix loglinear position control
Signed-off-by: Li-Yu Lin <liyu8561501@gmail.com>

--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -12,6 +12,8 @@ CONFIG_CEREBRI_RDD2_ALLOCATION=y
 CONFIG_CEREBRI_RDD2_POSITION=y
 CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=y
 CONFIG_CEREBRI_RDD2_ATTITUDE=y
+CONFIG_CEREBRI_RDD2_LOG_LINEAR_POSITION=y
+CONFIG_CEREBRI_RDD2_LOG_LINEAR_ATTITUDE=y
 CONFIG_CEREBRI_RDD2_LIGHTING=n
 CONFIG_CEREBRI_RDD2_CASADI=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY_COUNT=36
