Initial NavQ95 support
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

Co-authored-by: Andre Heinemans <andre.heinemans@nxp.com>

NavQ95 Disable I3C, mag and BMM350 due I3C instability

add DDR memory section

Initial NavQ95 Support

NavQ95 Disable I3C, mag and BMM350 due I3C instability

add DDR memory section

NavQ95: Set QDEC config for B3RB

navq95: fix configuration warnings

Rename to mr_navq95a

Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -113,4 +113,10 @@ target_sources(app PRIVATE ${SOURCE_FILES})
 
 target_include_directories(app SYSTEM BEFORE PRIVATE ${ZEPHYR_BASE}/include ${CMAKE_BINARY_DIR})
 
+add_subdirectory(boards ${build_dir})
+
+if(CONFIG_BOARD STREQUAL "mr_navq95a")
+  zephyr_linker_sources(ITCM_SECTION boards/mr_navq95a_itcm_linker.ld)
+endif()
+
 # vi: ts=2 sw=2 et
