adapt eth_[tr]x to support rpmsg synapse channel
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/drivers/synapse/eth_rx/CMakeLists.txt
+++ b/drivers/synapse/eth_rx/CMakeLists.txt
@@ -6,9 +6,14 @@ zephyr_library_named(cerebri_synapse_eth_rx)
 # we need to be able to include generated header files
 zephyr_include_directories()
 
-zephyr_library_sources(
+set(SOURCE_FILES
   src/main.c
-  src/proto/udp_rx.c
   )
+
+if (NOT CONFIG_CEREBRI_SYNAPSE_RPMSG)
+  list(APPEND SOURCE_FILES src/proto/udp_rx.c)
+endif()
+
+zephyr_library_sources(${SOURCE_FILES})
 
 add_dependencies(cerebri_synapse_eth_rx synapse_pb)
