--- a/drivers/synapse/eth_tx/CMakeLists.txt
+++ b/drivers/synapse/eth_tx/CMakeLists.txt
@@ -6,9 +6,14 @@ zephyr_library_named(cerebri_synapse_eth_tx)
 # we need to be able to include generated header files
 zephyr_include_directories()
 
-zephyr_library_sources(
+set(SOURCE_FILES
   src/main.c
-  src/proto/udp_tx.c
   )
+
+if (NOT CONFIG_CEREBRI_SYNAPSE_RPMSG)
+  list(APPEND SOURCE_FILES src/proto/udp_tx.c)
+endif()
+
+zephyr_library_sources(${SOURCE_FILES})
 
 add_dependencies(cerebri_synapse_eth_tx synapse_pb)
