Initial updates for simulation on Zephyr main.
This is on an active work branch to be squashed before merge.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -48,7 +48,7 @@ CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_DISK_ACCESS=y
 CONFIG_FS_FATFS_EXFAT=y
-CONFIG_POSIX_FS=y
+CONFIG_POSIX_FILE_SYSTEM=y
 CONFIG_DISK_DRIVER_SDMMC=y
 CONFIG_FS_FATFS_MOUNT_MKFS=y
 
