--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -1,10 +1,10 @@
-CONFIG_ETH_NATIVE_POSIX=y
+CONFIG_ETH_NATIVE_TAP=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=500
-CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+CONFIG_NATIVE_SIM_SLOWDOWN_TO_REAL_TIME=n
 
 CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_UART_NATIVE_POSIX=y
+CONFIG_UART_NATIVE_PTY=y
 CONFIG_LOG_BACKEND_NATIVE_POSIX=n
 CONFIG_NATIVE_UART_0_ON_OWN_PTY=y
 CONFIG_NATIVE_UART_0_ON_STDINOUT=n
