Fix issues with ring buffers and update for axis_align.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -30,16 +30,16 @@ CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX=0
 CONFIG_CEREBRI_RDD2_YAWRATE_IMAX=0
 
 # config
-CONFIG_ETH_NATIVE_POSIX=y
+CONFIG_ETH_NATIVE_TAP=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=500
-CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+CONFIG_NATIVE_SIM_SLOWDOWN_TO_REAL_TIME=n
 
 CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_UART_NATIVE_POSIX=y
+CONFIG_UART_NATIVE_PTY=y
 
 CONFIG_REBOOT=n
-CONFIG_LOG_BACKEND_NATIVE_POSIX=y
+CONFIG_LOG_BACKEND_NATIVE_POSIX=n
 CONFIG_LOG_MODE_DEFERRED=n
 CONFIG_LOG_MODE_IMMEDIATE=y
 
@@ -60,9 +60,9 @@ CONFIG_ASSERT_VERBOSE=y
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_ACTUATE_SOUND=n
+CONFIG_CEREBRI_SENSE_SBUS=n
 CONFIG_CEREBRI_ACTUATE_PWM=n
 CONFIG_CEREBRI_SENSE_POWER=n
-CONFIG_CEREBRI_SENSE_SBUS=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
