Remove need for disk access on s32k344.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -3,10 +3,14 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_SIZE_OPTIMIZATIONS=n
 
+CONFIG_FILE_SYSTEM=n
+CONFIG_FAT_FILESYSTEM_ELM=n
 CONFIG_DISK_ACCESS=n
 CONFIG_FS_FATFS_EXFAT=n
+CONFIG_POSIX_FILE_SYSTEM=n
 CONFIG_DISK_DRIVER_SDMMC=n
 CONFIG_FS_FATFS_MOUNT_MKFS=n
+
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=n
 
 CONFIG_TEST=y
