--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -29,6 +29,12 @@ CONFIG_CEREBRI_RDD2_ROLLRATE_IMAX=0
 CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX=0
 CONFIG_CEREBRI_RDD2_YAWRATE_IMAX=0
 
+CONFIG_CEREBRI_RDD2_ATTITUDE_RATE_ALPHA=95
+CONFIG_CEREBRI_RDD2_ATTITUDE_RATE_KP=1000000
+CONFIG_CEREBRI_RDD2_ATTITUDE_RATE_KI=50000
+CONFIG_CEREBRI_RDD2_ATTITUDE_RATE_ACCEL_GAIN=4
+CONFIG_CEREBRI_RDD2_ATTITUDE_RATE_MAG_GAIN=40
+
 # config
 CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_TEST_RANDOM_GENERATOR=y
