Testing more changes.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -24,8 +24,8 @@ CONFIG_CEREBRI_ACTUATE_SOUND=y
 CONFIG_NET_BUF_RX_COUNT=24
 CONFIG_NET_PKT_RX_COUNT=24
 
-CONFIG_CEREBRI_SENSE_SBUS=y
-CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_SENSE_SBUS=n
+CONFIG_CEREBRI_SENSE_POWER=n
 CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_MAG=n
@@ -34,7 +34,7 @@ CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 CONFIG_CEREBRI_RDD2_ESTIMATE_ODOMETRY_ETHERNET=n
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
-CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
+CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=n
 
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_CORE_COMMON=y
@@ -48,13 +48,10 @@ CONFIG_LOG_CMDS=y
 CONFIG_LOG_MODE_DEFERRED=y
 
 CONFIG_SENSOR_SHELL_THREAD_STACK_SIZE=8192
-CONFIG_SENSOR_LOG_LEVEL_DBG=y
+CONFIG_SENSOR_LOG_LEVEL_DBG=n
 CONFIG_RTIO_SUBMIT_SEM=n
 CONFIG_SPI_RTIO=y
 CONFIG_SPI_ASYNC=n
-CONFIG_SPI_MCUX_LPSPI_DMA=n
-CONFIG_ICM42688_DECODER=y
-CONFIG_ICM42688_STREAM=y
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
@@ -69,7 +66,7 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 # modules
 CONFIG_SYNAPSE_PB=y
 CONFIG_NANOPB=y
-CONFIG_UBXLIB=y
+CONFIG_UBXLIB=n
 
 # Debug
 CONFIG_CEREBRI_RDD2_LOG_LEVEL_DBG=n
