--- a/west.yml
+++ b/west.yml
@@ -14,9 +14,6 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: cognipilot
       url-base: https://github.com/CogniPilot
-    - name: personal
-      url-base: https://github.com/YahorL
-
 
   projects:
     - name: zephyr
@@ -38,7 +35,7 @@ manifest:
       revision: 843348bca3a15e914914b90057369b9616302e20 # main 6/11/25
       path: modules/lib/zros
     - name: cyecca
-      remote: personal
+      remote: cognipilot
       revision: afd329aaae3884943473cc92c91bc9216f263cf1 # incoming 19/06/25
       path: modules/lib/cyecca
     - name: synapse_pb
