--- a/app/rdd2/Kconfig
+++ b/app/rdd2/Kconfig
@@ -255,6 +255,19 @@ config CEREBRI_RDD2_LOG_LINEAR_POSITION
   help
     Enable loglinear atitude position
 
+config CEREBRI_RDD2_ATTITUDE_EST_ACCEL_GAIN
+  int "attitude rate accel gain"
+  default 40
+  help
+    attitude rate accel gain
+
+config CEREBRI_RDD2_ATTITUDE_EST_MAG_GAIN
+  int "attitude rate mag gain"
+  default 40
+  help
+    attitude rate mag gain
+
+
 module = CEREBRI_RDD2
 module-str = cerebri_rdd2
 source "subsys/logging/Kconfig.template.log_config"
