--- a/west.yml
+++ b/west.yml
@@ -36,7 +36,7 @@ manifest:
       path: modules/lib/zros
     - name: cyecca
       remote: cognipilot
-      revision: 0acc0882eee8ab146371eca71bcb30157b76b250 # main 6/11/25
+      revision: afd329aaae3884943473cc92c91bc9216f263cf1 # incoming 19/06/25
       path: modules/lib/cyecca
     - name: synapse_pb
       remote: cognipilot
