--- a/west.yml
+++ b/west.yml
@@ -36,7 +36,7 @@ manifest:
       path: modules/lib/zros
     - name: cyecca
       remote: cognipilot
-      revision: afd329aaae3884943473cc92c91bc9216f263cf1 # incoming 19/06/25
+      revision: ad96b7c4629ca58228d17bde350c83765295c942 # main 9/28/25
       path: modules/lib/cyecca
     - name: synapse_pb
       remote: cognipilot
