actuate: dshot: Update node to account for a minimum update-rate
Consider the use-case where the actuator updates are not coming at a
fast-enough pace to drive the DShot appropriately. In this case, have
the default update-rate be the worst-case update rate.

Alternative solution, inspired by: 6e49452.

Disclaimer: this has not be tested, so don't assume this is a final
solution, but rather a conceptual approach.

Signed-off-by: Luis Ubieda <luisf@croxel.com>

--- a/dts/bindings/cerebri,dshot-actuators.yaml
+++ b/dts/bindings/cerebri,dshot-actuators.yaml
@@ -8,6 +8,20 @@ description: DSHOT actuators parent node
 
 compatible: "cerebri,dshot-actuators"
 
+properties:
+  rate:
+    type: int
+    default: 200
+    description: |
+      Update rate of the dshot signal in Hz
+
+  disarm-timeout-ms:
+    type: int
+    default: 20
+    description: |
+      Inactivity timeout to disarm the DShot actuators, which is: no actuator
+      update is received within this time.
+
 child-binding:
   description: DSHOT actuators node
   properties:
