--- a/drivers/synapse/log_sdcard/Kconfig
+++ b/drivers/synapse/log_sdcard/Kconfig
@@ -4,6 +4,7 @@
 config CEREBRI_SYNAPSE_LOG_SDCARD
   bool "log sdcard"	
   default y
+  select RING_BUFFER_LARGE
   depends on ZROS
   help
     This option enables the sdcard logger
