vmu_rt1170: rdd2 add ITCM mapping
Very naive version for now, but sensor will change a bit and ideally I
need more trace data. But overall this already gives a good improvment

Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/app/rdd2/CMakeLists.txt
+++ b/app/rdd2/CMakeLists.txt
@@ -142,4 +142,8 @@ target_include_directories(app SYSTEM BEFORE PRIVATE
   ${CMAKE_BINARY_DIR}
   )
 
+if(CONFIG_BOARD STREQUAL "vmu_rt1170")
+  zephyr_linker_sources(ITCM_SECTION boards/vmu_rt1170_itcm_linker.ld)
+endif()
+
 # vi: ts=2 sw=2 et
