--- a/app/b3rb/boards/mr_navq95a_m7_flash.conf
+++ b/app/b3rb/boards/mr_navq95a_m7_flash.conf
@@ -88,3 +88,29 @@ CONFIG_DEBUG_THREAD_INFO=y
 # Logging
 #CONFIG_LOG_BACKEND_NET=n
 #CONFIG_LOG_BACKEND_NET_SERVER="192.0.2.2"
+
+# RPMsg
+CONFIG_IPM=y
+CONFIG_IPM_MBOX=y
+CONFIG_MBOX_NXP_IMX_MU=y
+CONFIG_MBOX_INIT_PRIORITY=0
+CONFIG_OPENAMP=y
+CONFIG_OPENAMP_COPY_RSC_TABLE=y
+CONFIG_OPENAMP_RSC_TABLE_NUM_RPMSG_BUFF=8
+CONFIG_OPENAMP_RSC_TABLE=y
+CONFIG_OPENAMP_MASTER=n
+CONFIG_OPENAMP_WITH_DCACHE=y
+CONFIG_CEREBRI_SYNAPSE_RPMSG=y
+
+# TTY over RPMsg (uncomment block below to enable)
+#CONFIG_SHELL_BACKEND_RPMSG=y
+#CONFIG_SHELL_BACKEND_SERIAL=n
+#CONFIG_ASSERT=n
+
+# Disable fat and enable rpmsgfs
+CONFIG_FILE_SYSTEM_RPMSGFS=y
+CONFIG_FAT_FILESYSTEM_ELM=n
+CONFIG_FILE_SYSTEM_SHELL=y
+
+# Disable atomic 64 support otherwise open-amp cannot be linked
+CONFIG_COMPILER_OPT="-DNO_ATOMIC_64_SUPPORT"
