--- a/drivers/synapse/CMakeLists.txt
+++ b/drivers/synapse/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_ETH_RX eth_rx)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_TOPIC topic)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_UDP udp)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_VESC_CAN vesc_can)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_RPMSG rpmsg)
