--- a/west.yml
+++ b/west.yml
@@ -51,3 +51,7 @@ manifest:
       remote: cognipilot
       revision: cf8f1631e862528ee044850bcc70273975b90771 # master 10/27/25
       path: modules/hal/nxp
+    - name: zros_drivers
+      remote: cognipilot
+      revision: b661c028fe8e6b0bbadc498c95c41c2c1f6cd948 # main 10/31/25
+      path: modules/lib/zros_drivers
