zros: offload perf utilities to zros-drivers repo
Updated manifest to go in sync with changes.

Signed-off-by: Luis Ubieda <luisf@croxel.com>

--- a/lib/core/common/Kconfig
+++ b/lib/core/common/Kconfig
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 menuconfig CEREBRI_CORE_COMMON
   bool "Enable core common"
+  select ZROS_PERF
   default y
   help
      This option enables the core common library
