sense: imu: Move driver to zros_drivers repo
In order to be able to use it in other apps.
In this case the user is required to know the CEREBRI_SENSE_IMU is
now ZROS_SENSE_IMU.

Signed-off-by: Luis Ubieda <luisf@croxel.com>

--- a/app/melm/boards/mr_canhubk3_s32k344.conf
+++ b/app/melm/boards/mr_canhubk3_s32k344.conf
@@ -34,7 +34,7 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 
 CONFIG_CEREBRI_SENSE_SBUS=y
-CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_ZROS_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
