--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -75,7 +75,7 @@ CONFIG_INPUT_SBUS_REPORT_FILTER=0
 CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
-CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_ZROS_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_ACCEL=n
 CONFIG_CEREBRI_SENSE_ICM42688=n
 
