--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -27,7 +27,7 @@ CONFIG_NET_PKT_RX_COUNT=24
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=n
-CONFIG_CEREBRI_SENSE_IMU=n
+CONFIG_ZROS_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 
