--- a/tests/pubsub/boards/native_posix.conf
+++ b/tests/pubsub/boards/native_posix.conf
@@ -12,7 +12,7 @@ CONFIG_CEREBRI_DREAM_SIL=y
 CONFIG_UBXLIB=n
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
-CONFIG_CEREBRI_SENSE_IMU=n
+CONFIG_ZROS_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
