sense: mag: move to zros_drivers
To use in other apps.

Signed-off-by: Luis Ubieda <luisf@croxel.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -34,7 +34,7 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_ZROS_SENSE_IMU=y
-CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
@@ -48,7 +48,7 @@ CONFIG_CEREBRI_ACTUATE_PWM_SHELL=n
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
-CONFIG_CEREBRI_SENSE_MAG_COUNT=2
+CONFIG_ZROS_SENSE_MAG_COUNT=2
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_ACTUATE_SOUND=y
 
