--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -26,7 +26,7 @@ CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_ZROS_SENSE_IMU=y
-CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
