--- a/tests/pubsub/prj.conf
+++ b/tests/pubsub/prj.conf
@@ -12,7 +12,7 @@ CONFIG_PUBSUB_LOG_LEVEL_DBG=y
 
 CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_ZROS_SENSE_IMU=y
-CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 
