--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -64,7 +64,7 @@ CONFIG_CEREBRI_SENSE_POWER=n
 CONFIG_CEREBRI_SENSE_SBUS=n
 CONFIG_ZROS_SENSE_IMU=n
 CONFIG_ZROS_SENSE_BARO=n
-CONFIG_CEREBRI_SENSE_MAG=n
+CONFIG_ZROS_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
