--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -80,7 +80,7 @@ CONFIG_CEREBRI_SENSE_ACCEL=n
 CONFIG_CEREBRI_SENSE_ICM42688=n
 
 CONFIG_CEREBRI_SENSE_SBUS=y
-CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
@@ -93,7 +93,7 @@ CONFIG_PWM=y
 
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
-CONFIG_CEREBRI_SENSE_MAG_COUNT=2
+CONFIG_ZROS_SENSE_MAG_COUNT=2
 
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
