--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -28,7 +28,7 @@ CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_ZROS_SENSE_IMU=n
-CONFIG_CEREBRI_SENSE_MAG=n
+CONFIG_ZROS_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 
 CONFIG_CEREBRI_RDD2_ESTIMATE_ODOMETRY_ETHERNET=n
