--- a/tests/pubsub/boards/native_posix.conf
+++ b/tests/pubsub/boards/native_posix.conf
@@ -14,7 +14,7 @@ CONFIG_UBXLIB=n
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_ZROS_SENSE_IMU=n
 CONFIG_ZROS_SENSE_BARO=n
-CONFIG_CEREBRI_SENSE_MAG=n
+CONFIG_ZROS_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
